--- a/manual_code/lab3/RTX-App/Objects/RAM/rtx-app-ram.htm
+++ b/manual_code/lab3/RTX-App/Objects/RAM/rtx-app-ram.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\Objects\RAM\rtx-app-ram.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\RAM\rtx-app-ram.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060750: Last Updated: Tue Jul 13 20:27:01 2021
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060750: Last Updated: Thu Jul 15 17:39:14 2021
 <BR><P>
 <H3>Maximum Stack Usage =        264 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -205,8 +205,8 @@ Global Symbols
 <BR><BR>[Stack]<UL><LI>Max Depth = 216 + Unknown Stack Size
 <LI>Call Chain = __rt_entry_main &rArr; main &rArr; ae_init_new &rArr; ae_set_init_tasks_info &rArr; set_ae_init_tasks &rArr; set_ae_tasks &rArr; init_ae_tsk_test &rArr; tfp_printf &rArr; tfp_format &rArr; putchw
 </UL>
-<BR>[Calls]<UL><LI><a href="#[46]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;exit
-<LI><a href="#[45]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
+<BR>[Calls]<UL><LI><a href="#[45]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
+<LI><a href="#[46]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;exit
 </UL>
 
 <P><STRONG><a name="[b0]"></a>__rt_entry_postli_1</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, __rtentry2.o(.ARM.Collect$$rtentry$$0000000C))
